[tool.poetry]
name = "lassip"
version = "0.1.0"
description = ""
authors = ["Vinícius Couto Tasso <vcoutasso@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "~3.11"
scipy = "^1.10.1"
numpy = "^1.24.3"
matplotlib = "^3.7.1"
opencv-python = "^4.7.0.72"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
